# tendies-maker

./: .gitignore  README.md  generate_data.py  main.py  normalize.py  portfolio.py  prepare_data.py  pyproject.toml  requirements.txt  run_ML.py  setup.py
.github/workflows/: daily_data_run.yml  main.yml
archive/: generate_data.py  prepare_data.py
data/: mock_data.parquet  nasdaq_stocks.txt  nasdaq_stocks_filtered.csv  options_2023-03-12.xlsx
jobs/: daily_snapshot.py  email_report.py  generate_data.py
src/tendies_maker/: config.py  credentials.json  datamodel.py  dataproc.py  db.py  fmm.py  gather.py  main.py  models.py  optimization_prob.py  options_data.py  portfolio.py  test.py  thinker.py  tm.py  utils.py
src/tendies_maker/jobs/: generate_data.py
stocks/: __init__.py  gather.py  gather_data.py  plots.py  thinker.py
