[tool.poetry]
name = "tendies-maker"
version = "0.1.0"
description = ""
authors = ["jackagolli <jagolli192@gmail.com>"]
readme = "README.md"
packages = [{include = "tendies_maker"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
